[spring-boot-employee][Domingo] refactor simplify getEmployeeByGender