@@ -51,7 +51,10 @@ public class EmployeeServiceImpl implements EmployeeService {
 
     @Override
     public List<Employee> getEmployeeByGender(String gender) {
-        return employeeList.stream().filter(e -> gender.equals(e.getGender())).collect(Collectors.toList());
+        return employeeList.stream()
+                .filter(e -> gender.equals(e.getGender()))
+                .collect(Collectors
+                        .toList());
     }
 
     @Override
